@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-10-03T01:15:05Z",
+  "timestamp" : "2025-10-04T01:12:53Z",
   "count_outdated" : 1971,
   "uniques_outdated" : 1209,
-  "count" : 1987,
-  "uniques" : 1225,
+  "count" : 1988,
+  "uniques" : 1226,
   "clones" : [
     {
       "timestamp": "2025-09-21T00:00:00Z",
@@ -97,6 +97,15 @@
     },
     {
       "timestamp": "2025-10-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-04T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
