@@ -1,5 +1,5 @@
 {
-  "count": 16,
+  "count": 17,
   "uniques": 7,
   "clones": [
     {
@@ -54,6 +54,11 @@
     },
     {
       "timestamp": "2025-10-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-04T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
