@@ -1,3 +1,12 @@
+2025-10-04T01:12:53Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18237451669 # 786
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-04
+* notice: last 14d: unq all: 7 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 1209 1971 / 1225 1987
+* notice: next accum: outdated-unq outdated-all / unq all: 1209 1971 / 1226 1988
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-10-04]
+
 2025-10-03T01:15:05Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18210009482 # 785
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-03
